# nebula

./: .editorconfig  .gitignore  LICENSE  README.en.md  README.md  package-lock.json  package.json
.github/workflows/: build.yml
backend/: go.mod  go.sum  main.go
backend/api/: openapi.yaml
backend/internal/api/: health.go  response.go  validator.go
backend/internal/config/: manager.go
backend/internal/downloader/: downloader.go  dto.go  persistence.go  priority.go  service.go
backend/internal/fileutil/: types.go
backend/internal/handlers/: config.go  download.go  favorites.go  history.go  magnet.go  torrent.go  types.go  utils.go
backend/internal/logger/: logger.go
backend/internal/manager/: download_manager.go
backend/internal/middleware/: auth.go  endpoint_ratelimit.go  ratelimit.go  recovery.go
backend/stubs/go-libutp/: go.mod  libutp.go
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ClipboardMonitor.tsx  ConnectionStatus.tsx  DeleteConfirmModal.tsx  DownloadCard.tsx  DownloadContextMenu.tsx  DownloadPanel.tsx  DownloadsList.tsx  DropZone.tsx  EmptyState.tsx  ErrorBoundary.tsx  FileDialog.tsx  SettingsPanel.tsx  Sidebar.tsx  SkeletonLoader.tsx  TitleBar.tsx  Toast.tsx  TorrentAnalysisModal.tsx
frontend/src/hooks/: useBackendHealth.ts  useClipboard.ts  useNebulaApi.ts  useSSE.ts  useToast.ts
frontend/src/store/: useAppStore.ts  useConfigStore.ts  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+13 files in other folders)
