[package]
name = "nebula"
version = "0.1.0"
description = "Baixador de Links Magnéticos - Aplicação desktop moderna para download de torrents via magnet links"
authors = ["Nebula Contributors <https://github.com/Wesllen-Vinicius/nebula>"]
license = "MIT"
repository = "https://github.com/Wesllen-Vinicius/nebula"
homepage = "https://github.com/Wesllen-Vinicius/nebula"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-dialog = "2.4.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
